pokemon kingdom class 2

--- a/src/11.PokemonKingdom/Component/PokemonCardComponent.module.css
+++ b/src/11.PokemonKingdom/Component/PokemonCardComponent.module.css
@@ -1,5 +1,6 @@
 .card-container {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -8,10 +9,77 @@
   margin: 16px;
   border-radius: 5px;
 
+  width: 150px;
+  /* height: 100px; */
+
   transition: transform 0.2s;
 }
 
 .card-container:hover {
   z-index: 10;
-  transform: scale(1.5);
+  transform: scale(1.2);
+}
+
+.grass {
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+}
+
+.fire {
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+}
+
+.water {
+  background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+}
+
+.bug {
+  background-image: linear-gradient(-225deg, #e6b980 0%, #eacda3 100%);
+}
+
+.poison {
+  background-image: linear-gradient(to top, #df89b5 0%, #bfd9fe 100%);
+}
+
+.electric {
+  background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);
+}
+
+.ground {
+  background-image: linear-gradient(315deg, #772f1a 0%, #f2a65a 74%);
+}
+
+.normal {
+  background-image: linear-gradient(120deg, #e3fdf5 0%, #ffe6fa 100%);
+}
+
+.fairy {
+  background-image: linear-gradient(
+    to top,
+    #ff9a9e 0%,
+    #fecfef 99%,
+    #fecfef 100%
+  );
+}
+
+.image {
+  width: 100px;
+  height: 100px;
+}
+
+.number {
+  /* width: 25px;
+  height: 25px; */
+  border-radius: 100px;
+  background-color: rgba(255, 255, 255, 0.4);
+  padding: 6px 10px;
+  margin-bottom: 2px;
+}
+
+.knowmore {
+  border: 1px solid black;
+  padding: 10px;
+  margin-top: 4px;
+  border-radius: 8px;
+
+  cursor: pointer;
 }
