--- a/src/11.PokemonKingdom/Page/PokemonKingdomMainPage.module.css
+++ b/src/11.PokemonKingdom/Page/PokemonKingdomMainPage.module.css
@@ -2,3 +2,25 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+.loadmore {
+  padding: 10px;
+  border-radius: 8px;
+  background-image: linear-gradient(315deg, #76daff 0%, #fcd000 74%);
+  cursor: pointer;
+}
+
+body {
+  background-color: black;
+  box-sizing: border-box;
+}
+
+/* What Box sizing and why ?  */
