--- a/src/11.PokemonKingdom/Component/PokemonCardComponent.module.css
+++ b/src/11.PokemonKingdom/Component/PokemonCardComponent.module.css
@@ -83,3 +83,26 @@
 
   cursor: pointer;
 }
+
+/* DO NOT USE THIS  */
+
+/* TAILWIND */
+
+@media screen and (max-width: 400px) {
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 20px 15px;
+    margin: 16px;
+    border-radius: 5px;
+
+    width: 70vw;
+    /* height: 100px; */
+
+    transition: transform 0.2s;
+  }
+}
