--- a/src/11.PokemonKingdom/Component/PokemonModalComponent.module.css
+++ b/src/11.PokemonKingdom/Component/PokemonModalComponent.module.css
@@ -1,4 +1,8 @@
 .popupcontainer {
+  position: fixed;
+  top: 20%;
+  left: 25%;
+
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -7,8 +11,8 @@
 
   z-index: 1000000;
 
-  width: 100%;
-  height: 100%;
+  width: 40vw;
+  height: 50vh;
 
   border: 2px solid black;
 
@@ -40,7 +44,32 @@
   padding: 20px;
 
   background-color: aqua;
+
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+
+  justify-content: center;
+  align-items: center;
 }
 
 .closebutton {
+  color: black;
+
+  border: 1px solid black;
+
+  padding: 10px;
+  margin: 10px;
+
+  border-radius: 50%;
+
+  position: absolute;
+  top: 10px;
+  right: 5px;
+
+  cursor: pointer;
+}
+
+span {
+  font-weight: bold;
 }
