--- a/src/11.PokemonKingdom/Page/PokemonKingdomMainPage.module.css
+++ b/src/11.PokemonKingdom/Page/PokemonKingdomMainPage.module.css
@@ -23,4 +23,28 @@ body {
   box-sizing: border-box;
 }
 
-/* What Box sizing and why ?  */
+/* Breakpoints */
+
+/*
+
+
+Breakpoint	Class infix	Dimensions
+X-Small	None	<576px
+Small	sm	≥576px
+Medium	md	≥768px
+Large	lg	≥992px
+Extra large	xl	≥1200px
+Extra extra large	xxl	≥1400px
+*/
+
+@media screen and (max-width: 400px) {
+  .app-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+
+    margin-left: 25%;
+  }
+}
