--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+
+  width: 100vw;
+  height: 100vh;
 }
 
 .App-logo {
@@ -35,4 +38,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* To make sure your app dosent have the Horizontal Scrolling */
+* {
+  box-sizing: border-box;
 }
