Interview-Question: 1.switchList

--- a/src/11.PokemonKingdom/Page/PokemonKingdomMainPage.module.css
+++ b/src/11.PokemonKingdom/Page/PokemonKingdomMainPage.module.css
@@ -19,8 +19,8 @@
 }
 
 body {
-  background-color: black;
-  box-sizing: border-box;
+  /* background-color: black;
+  box-sizing: border-box; */
 }
 
 /* Breakpoints */
